_rendered/apps/crowdsec-web-ui/cilium_io-ciliumnetworkpolicy-crowdsec-web-ui-preset-cnp.yaml
# Source: crowdsec-web-ui/charts/crowdsec-web-ui/charts/networkpolicy/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: crowdsec-web-ui-preset-cnp
spec:
  endpointSelector:
    matchLabels:
      
      app.kubernetes.io/name: crowdsec-web-ui
      app.kubernetes.io/instance: crowdsec-web-ui
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: "services.nvd.nist.gov"
    - toEndpoints:
        - matchLabels:
            custom.network/mqtt-client: "ingress"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
    - 
      toEndpoints:
      - matchLabels:
          k8s-app: crowdsec
          type: lapi
      toPorts:
      - ports:
        - port: "8080"
          protocol: TCP
